twitterカードを追加

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@ogql4FN9hE96965">
+  <meta property="og:url" content="https://mikiro-ito.github.io/samurai_HTML-CSS/">
+  <meta property="og:title" content="SocialTech">
+  <meta property="og:description" content="ITで社会を変革する会社のホームページ">
+  <meta property="og:image" content="index.html/images/Logp.png">
   <meta charset="UTF-8">
   <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
