--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:url" content="https://mikiro-ito.github.io/samurai_HTML-CSS/">
   <meta property="og:title" content="SocialTech">
   <meta property="og:description" content="ITで社会を変革する会社のホームページ">
-  <meta property="og:image" content="index.html/images/Logo.png">
+  <meta property="og:image" content="mikiro-ito.github.io/samurai_HTML-CSS//images/Logo.png">
   <meta charset="UTF-8">
   <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
   <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
